fix scrollbar in mobile responsive

--- a/react/src/assets/sass/main.scss
+++ b/react/src/assets/sass/main.scss
@@ -10,13 +10,13 @@ body {
   box-sizing: border-box;
   background-color: $background-color;
   color: #fff;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 // Start Scrollbar
 ::-webkit-scrollbar {
   width: 7px;
-  height: 10px;
+  height: 1px;
 }
 
 ::-webkit-scrollbar-track {
@@ -48,7 +48,8 @@ body {
   margin: 0 auto;
   display: grid;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
+  width: 100%;
 
   .circle-03 {
     width: 100%;
@@ -763,15 +764,26 @@ body {
     }
 
     .home {
+      margin-top: 5vh;
       height: 100vh;
       width: 90%;
       display: flex;
       flex-direction: column-reverse;
+      align-items: center;
 
       .right-home {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         .my-image {
-          height: 250px;
-          width: 150px;
+          
+          height: 200px;
+          width: 120px;
+        }
+        .social-media {
+          display: flex;
+          justify-content: center;
+          margin: 0;
         }
       }
 
